# Livzon-Hermes-Lite

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  model_tools.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_agent.py  setup.py  toolsets.py
agent/: _stubs.py  account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  azure_identity_adapter.py  background_review.py  bedrock_adapter.py  browser_provider.py  browser_registry.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  context_compressor.py  context_references.py  conversation_compression.py  conversation_loop.py  copilot_acp_client.py  credential_pool.py  credits_tracker.py  display.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  image_gen_provider.py  image_gen_registry.py  image_routing.py  insights.py  model_metadata.py  models_dev.py  moonshot_schema.py  nous_rate_guard.py  onboarding.py  plugin_llm.py  prompt_builder.py  shell_hooks.py  skill_bundles.py  skill_commands.py  skill_preprocessing.py  (+11 more)
agent/transports/: chat_completions.py
data/: __init__.py
data/examples/: __init__.py  companies_example.json  tenders_example.json
docs/: INTEGRATION.md
gateway/: __init__.py  platform_registry.py  session_context.py
hermes_cli/: __init__.py  _stubs.py  _subprocess_compat.py  auth.py  config.py  copilot_auth.py  env_loader.py  kanban_db.py  model_normalize.py  models.py  nous_account.py  nous_subscription.py  plugins.py  profiles.py  providers.py  runtime_provider.py  skin_engine.py  timeouts.py
plugins/: __init__.py
plugins/context_engine/: __init__.py
plugins/memory/: __init__.py
plugins/web/: __init__.py
scripts/: __init__.py  ingest_cli.py  init_knowledge_db.sql  init_memory.py  init_tender_db.sql  tender_cli.py
services/: __init__.py  chunk_store.py  config.py  dazah_agent_service.py  document_ingestion.py  embedding_service.py  memory_service.py  rerank_service.py  retrieval_pipeline.py  tender_service.py
tests/: test_dazah_attachments.py  test_dazah_feishu_confirmation_routing.py  test_dazah_feishu_tool_payload.py  test_dazah_policy_prompt.py  test_dazah_quality_routing.py
tools/: approval.py  browser_tool.py  checkpoint_manager.py  code_execution_tool.py  credential_files.py  dazah_platform.py  delegate_tool.py  env_passthrough.py  file_tools.py  kanban_tools.py  knowledge_tool.py  mcp_tool.py  memory_tool.py  process_registry.py  registry.py  skill_manager_tool.py  skill_provenance.py  slash_confirm.py  tender_tools.py  terminal_tool.py  threat_patterns.py  tool_backend_helpers.py  tool_search.py  vision_tools.py  web_tools.py  xai_http.py
